# job-logger

./: LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/models/: job_posting.py
app/routers/: job_posting_router.py
app/services/: airtable.py  openai_services.py
app/utils/: text_extraction.py
